--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "https://s21.ax1x.com/2024/10/05/pA83Ku4.png"
   name             : "Mai2EX"
   pronouns         : "no" # example: "she/her"  
   bio              : "普通而又努力懒惰的抽象艺术哲学梦想家"
