--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ author:
   # Biographic information
   avatar           : "https://s21.ax1x.com/2024/10/05/pA83Ku4.png"
   name             : "Mai2EX"
-  pronouns         : "no" # example: "she/her"  
+  pronouns         : "she or her" # example: "she/her"  
   bio              : "普通而又努力懒惰的抽象艺术哲学梦想家"
   location         : "中国"
-  employer         : "No"
+  employer         : "=)"
   uri              : # URL
   email            : "2770484274@qq.com" 
 
