--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : "麦角二胺@ora_c16215" # Username for X / Twitter
+  twitter          : "https://x.com/ora_c16215" # Username for X / Twitter
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
